integ-tests/tests/snapshots/valid__tables__implicit_and_explicit_before-2.snap
---
source: integ-tests/tests/valid.rs
expression: spans
---
note[integer]: root_a_b_c_answer
  ┌─ implicit_and_explicit_before:6:10
  │
6 │ answer = 42
  │          ^^

note[table]: root_a_b_c
  ┌─ implicit_and_explicit_before:5:1
  │  
5 │ ╭ [a.b.c]
6 │ │ answer = 42
  │ ╰───────────^

note[table]: root_a_b
  ┌─ implicit_and_explicit_before:5:1
  │  
5 │ ╭ [a.b.c]
6 │ │ answer = 42
  │ ╰───────────^

note[integer]: root_a_better
  ┌─ implicit_and_explicit_before:3:10
  │
3 │ better = 43
  │          ^^

note[table]: root_a
  ┌─ implicit_and_explicit_before:2:1
  │  
2 │ ╭ [a]
3 │ │ better = 43
  │ ╰───────────^

note[table]: root
  ┌─ implicit_and_explicit_before:1:1
  │  
1 │ ╭ 
2 │ │ [a]
3 │ │ better = 43
4 │ │ 
5 │ │ [a.b.c]
6 │ │ answer = 42
7 │ │ 
  │ ╰^
